Sub-header spacing fix

--- a/css/style.css
+++ b/css/style.css
@@ -602,7 +602,7 @@ p.exhibition-nav { margin-top: 20px; margin-bottom: 10px; }
 
 /**************************************************************** Foundation ***/
 
-.foundation-p h4 { line-height: 0.5em; } 
+.foundation-p { line-height: 0em; } 
 
 
 
